--- a/templates/FichesClient/My_FicheClient.html.twig
+++ b/templates/FichesClient/My_FicheClient.html.twig
@@ -38,7 +38,7 @@
 									{% endif %}
 									<th>{{ client.dateReceptionLogistique|date('d/m/Y') }}</th>
 									<th>{{ client.dateReceptionDirecteur|date('d/m/Y') }}</th>
-									<th>{{ client.dateValidationDirecteur|date('d/m/Y') }}</th>
+									<th>{{ client.dateValidDirection|date('d/m/Y') }}</th>
 									<th>{{ client.nomAppel }}</th>
 									<th>{{ client.raisonSocial }}</th>
 
